hphp/hack/test/extended_reasons/unsafe_cast_fn_call.php.exp
error: Typing[4110] Invalid argument

File unsafe_cast_fn_call.php, line 6, character 15 - line 6, character 57:

 1 | <?hh
 2 | 
 3 | function expects_int(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(»HH\FIXME\UNSAFE_CAST<string, bool>("hello")«);
 7 | }

Expected int

File unsafe_cast_fn_call.php, line 3, character 22 - line 3, character 24:

 1 | <?hh
 2 | 
 3 | function expects_int(»int« $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, bool>("hello"));
 7 | }

But got bool because the expression went through a HH\FIXME\UNSAFE_CAST. The type might be a lie!

File unsafe_cast_fn_call.php, line 6, character 15 - line 6, character 57:

 1 | <?hh
 2 | 
 3 | function expects_int(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(»HH\FIXME\UNSAFE_CAST<string, bool>("hello")«);
 7 | }

Here's why:


  Step 1 of 3                                                                   

I started by checking this subtype relationship.

The subtype comes from this function or method declaration

File unsafe_cast_fn_call.php, line 3, character 10 - line 3, character 20:

 1 | <?hh
 2 | 
 3 | function »expects_int«(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, bool>("hello"));
 7 | }

The supertype comes from this expression

File unsafe_cast_fn_call.php, line 6, character 3 - line 6, character 58:

 1 | <?hh
 2 | 
 3 | function expects_int(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   »expects_int(HH\FIXME\UNSAFE_CAST<string, bool>("hello"))«;
 7 | }


  Step 2 of 3                                                                   

These are function types so next I checked the 1st function parameters.
Functions are contravariant in their parameters so the direction of the subtype relationship is reversed.

The subtype comes from this expression

File unsafe_cast_fn_call.php, line 6, character 50 - line 6, character 56:

 1 | <?hh
 2 | 
 3 | function expects_int(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, bool>(»"hello"«));
 7 | }

and flows into this element

File unsafe_cast_fn_call.php, line 6, character 15 - line 6, character 57:

 1 | <?hh
 2 | 
 3 | function expects_int(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(»HH\FIXME\UNSAFE_CAST<string, bool>("hello")«);
 7 | }

through an UNSAFE_CAST

The supertype comes from this hint

File unsafe_cast_fn_call.php, line 3, character 22 - line 3, character 24:

 1 | <?hh
 2 | 
 3 | function expects_int(»int« $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, bool>("hello"));
 7 | }


  Step 3 of 3                                 (here is where the error occurred) 

The subtype is a union type so next I checked the subtype constraint is satisfied for all its elements.

The subtype comes from this expression

File unsafe_cast_fn_call.php, line 6, character 50 - line 6, character 56:

 1 | <?hh
 2 | 
 3 | function expects_int(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, bool>(»"hello"«));
 7 | }

and flows into this element

File unsafe_cast_fn_call.php, line 6, character 15 - line 6, character 57:

 1 | <?hh
 2 | 
 3 | function expects_int(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(»HH\FIXME\UNSAFE_CAST<string, bool>("hello")«);
 7 | }

through an UNSAFE_CAST

The supertype is the same as before.

File unsafe_cast_fn_call.php, line 3, character 22 - line 3, character 24:

 1 | <?hh
 2 | 
 3 | function expects_int(»int« $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, bool>("hello"));
 7 | }

error: Typing[4110] Invalid argument

File unsafe_cast_fn_call.php, line 6, character 15 - line 6, character 57:

 1 | <?hh
 2 | 
 3 | function expects_int(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(»HH\FIXME\UNSAFE_CAST<string, bool>("hello")«);
 7 | }

Expected int

File unsafe_cast_fn_call.php, line 3, character 22 - line 3, character 24:

 1 | <?hh
 2 | 
 3 | function expects_int(»int« $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, bool>("hello"));
 7 | }

But got bool

File unsafe_cast_fn_call.php, line 6, character 44 - line 6, character 47:

 1 | <?hh
 2 | 
 3 | function expects_int(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, »bool«>("hello"));
 7 | }

  via this generic Tout

File soundness.hhi, line 34, character 7 - line 34, character 10:

 32 |   Tin $t,
 33 |   ?\HH\FormatString<nothing> $msg = null,
 34 | )[]: ~»Tout«;
 35 | 
 36 | /**
 37 |  * `UNSAFE_NONNULL_CAST` allows you to lie to the type checker and

Here's why:


  Step 1 of 2                                                                   

I started by checking this subtype relationship.

The subtype comes from this hint

File soundness.hhi, line 34, character 6 - line 34, character 10:

 32 |   Tin $t,
 33 |   ?\HH\FormatString<nothing> $msg = null,
 34 | )[]: »~Tout«;
 35 | 
 36 | /**
 37 |  * `UNSAFE_NONNULL_CAST` allows you to lie to the type checker and

The supertype comes from this hint

File unsafe_cast_fn_call.php, line 3, character 22 - line 3, character 24:

 1 | <?hh
 2 | 
 3 | function expects_int(»int« $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, bool>("hello"));
 7 | }


  Step 2 of 2                                 (here is where the error occurred) 

The subtype is a union type so next I checked the subtype constraint is satisfied for all its elements.

The subtype comes from this hint

File unsafe_cast_fn_call.php, line 6, character 44 - line 6, character 47:

 1 | <?hh
 2 | 
 3 | function expects_int(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, »bool«>("hello"));
 7 | }

and flows into this hint

File soundness.hhi, line 34, character 7 - line 34, character 10:

 32 |   Tin $t,
 33 |   ?\HH\FormatString<nothing> $msg = null,
 34 | )[]: ~»Tout«;
 35 | 
 36 | /**
 37 |  * `UNSAFE_NONNULL_CAST` allows you to lie to the type checker and

as the instantiation of the generic Tout

The supertype is the same as before.

File unsafe_cast_fn_call.php, line 3, character 22 - line 3, character 24:

 1 | <?hh
 2 | 
 3 | function expects_int(»int« $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   expects_int(HH\FIXME\UNSAFE_CAST<string, bool>("hello"));
 7 | }

